src/test/resources/typeSystemTestModels/valid/classes/NonFinalClass.java
package typeSystemTestModels.valid.classes;

public class NonFinalClass {


}