src/test/resources/typeSystemTestModels/invalid/fieldsAndLocalVars/First.java
package typeSystemTestModels.invalid.fieldsAndLocalVars;

public class First<T> {

}